--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_calculator_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,10 +21,12 @@
         </activity>
         <activity
             android:name=".ConversionActivity"
-            android:label="单位换算" />
+            android:label="单位换算"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SysconvertActivity"
-            android:label="进制转换" />
+            android:label="进制转换"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
